ファイルの配置を変更

--- a/TatelierDiscordRPC/TatelierDiscordRPC.csproj
+++ b/TatelierDiscordRPC/TatelierDiscordRPC.csproj
@@ -71,9 +71,10 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="discord-rpc.dll">
+    <Content Include="lib\discord-rpc.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="lib\Tatelier.Interface.Module.DiscordRPC.dll" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
