ファイル配置を修正

--- a/TatelierDiscordRPC/TatelierDiscordRPC.csproj
+++ b/TatelierDiscordRPC/TatelierDiscordRPC.csproj
@@ -71,10 +71,14 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="lib\discord-rpc.dll">
+    <Content Include="discord-rpc.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="lib\Tatelier.Interface.Module.DiscordRPC.dll" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="package.hjson">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
